Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.14-dev-432-g399854c https://github.com/reactos/reactos/commit/399854ce31ef8fe42b72319e8cbae0e75989cfa3
Attachments
Issue Links
- blocks
-
CORE-10480 [shell32] Show default icon when program has no icon
-
- Resolved
-
- is blocked by
-
CORE-16557 Regression: explorer crashes when you try to open CD disc
-
- Resolved
-
-
CORE-18897 Regression in icons displayed after commit 0.4.14-dev-459-gcfdbccf
-
- Resolved
-