[SHELL32] Follow-up of #2076 (#2091)

Fix EXE and SCR file icons. CORE-16533